Modificación del emiter y se eliminó la clase clickSave

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -35,6 +35,6 @@
           Te pasaste, máximo deben haber 100 caracteres.
         </p>
     </div>
-    <button class="button" type="submit" [disabled]="form.invalid" (click)="clickSave(form)">Guardar</button>
+    <button class="button" type="submit" [disabled]="form.invalid">Guardar</button>
     </form>
 </div>
